maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:31: error: '(' expected but identifier found.
      if getIndication(X,Y)==distance-1 {
         ^ShortestPathMaze:76: error: illegal start of simple expression
    }
    ^